# ChangeLog for media-radio/flrig
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/flrig/ChangeLog,v 1.41 2015/03/27 15:23:06 tomjbe Exp $

*flrig-1.3.21 (27 Mar 2015)

  27 Mar 2015; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.21.ebuild:
  Version bump

  25 Feb 2015; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.19.ebuild:
  Stable for x86, wrt bug #541002

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.19.ebuild:
  Stable for amd64, wrt bug #541002

*flrig-1.3.19 (27 Dec 2014)

  27 Dec 2014; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.19.ebuild:
  Maintenance release

*flrig-1.3.18 (13 Dec 2014)

  13 Dec 2014; Thomas Beierlein <tomjbe@gentoo.org> -flrig-1.3.15.ebuild,
  flrig-1.3.16.ebuild, +flrig-1.3.18.ebuild, +files/fix-bashism.patch,
  -files/vfprintf_bug.diff:
  Builds with dash (bug #526554). Drop old. Version bump

  10 Oct 2014; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.16.ebuild:
  Stable for x86, wrt bug #519468

  09 Oct 2014; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.16.ebuild:
  Stable for amd64, wrt bug #519468

*flrig-1.3.16 (14 Jun 2014)

  14 Jun 2014; Thomas Beierlein <tomjbe@gentoo.org> -flrig-1.3.12.ebuild,
  -flrig-1.3.13.ebuild, +flrig-1.3.16.ebuild:
  Version bump. Drop old.

*flrig-1.3.15 (06 Feb 2014)

  06 Feb 2014; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.15.ebuild:
  Version bump

  05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> flrig-1.3.14.ebuild:
  Stable for x86, wrt bug #495788

  04 Jan 2014; Chema Alonso <nimiux@gentoo.org> flrig-1.3.14.ebuild:
  Stable for amd64 wrt bug #495788

*flrig-1.3.14 (17 Oct 2013)

  17 Oct 2013; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.14.ebuild:
  Version bump

*flrig-1.3.13 (03 Sep 2013)

  03 Sep 2013; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.13.ebuild,
  +files/vfprintf_bug.diff:
  Version bump

  15 Jul 2013; Thomas Beierlein <tomjbe@gentoo.org> -flrig-1.3.10.ebuild,