@@ -7,17 +7,19 @@ DIST flrig-1.3.16.tar.gz 604998 SHA256 c39f951ab20e195819e6962b9038c3097b7c1a466
 DIST flrig-1.3.18.tar.gz 616711 SHA256 50f0a3eb1110a50a838fdd8f1393d2eafe1b6ea605deaf437e0e61a5a7d34370 SHA512 94f3a783d171003323130bccbb762f676de9b3d629f898715ab713ccc03f5198bc25ca39c913bedc6d28a2d0272dc6e584566a9e09389222dcffa22b1bab3f8e WHIRLPOOL 46ef6f66a7c59bbbc1f3f45010b8da576bbe1cb9148274059a54bceab28a9f775f5c8cb41f030b435cd2e850814b12caab0d780e18829d5819169102f28ab2bf
 DIST flrig-1.3.19.tar.gz 617353 SHA256 4b697d6737b94b3e3cf1237283f23587ffaf6de848e8ea6f42985bca586692f0 SHA512 f4cc5df9d5dd0a6d5ad5574c0df08dc18ea409253216ba32306b226cf5cb76c956db715e711b612232b6a10d514e71f72f6a923c660da02e5a662a00a5434fda WHIRLPOOL a0596709f92ad39ca23a6809185a01a8e77e19f9c22e829b59d8ee3abf214a4dba5703c06db118b1304b95d079c119e4c5a6c57d5389d0f99efecf7b4234e9ac
 DIST flrig-1.3.21.tar.gz 621380 SHA256 d5d83832ab8e072962e01d90a66b609d93992a2a9266e9647adfbb35ef28dd91 SHA512 5f1d96ab2464089448c0dcdcb35134f7e26e2c17d9c63c19cd256650a34a16bff5e1b41913842bba7f8c7f320bdc9f15e9d48f1e721c3a2fd8b316ab6a91ca6d WHIRLPOOL b5079105b9b5796c07b57a160bb54125709feba02959232da8f82ca44a966be795d6cf48c872aedbc8720740e1b486e73a3bb4d4fe5bf82b42f66a7f9113dd11
+DIST flrig-1.3.22.tar.gz 613526 SHA256 be30ceaf06a64cc7db9f12f0a7d1da597a5569f248323f2dc2cd037fd1730908 SHA512 51525de330ead7dd5f79d447dc53c6710a99faa4550c06fe3a80e6e504f67bd0a40fbd4befb907ee8770d7a69831ab993f1553e9ecb44e96d8140cc8471b3235 WHIRLPOOL a3370812bd01ef93555b5084c1f177ed1e965642e10e027ef4b98305f9436c8483391a3f79f36b7a0fe2c8102fbb87215f86ba782d4dcab2e12313f7e5310b1b
 EBUILD flrig-1.3.14.ebuild 654 SHA256 e4ff5ace022d1e1ff792d5bc4b8234306e6c84d46acf1b93a7153c0a18fab3fb SHA512 81a915c4802a8b949fd55637706f02b010b8f6cf9fd18eab8466ea52248e76d7ce61268c6331826fe7627c222b1da2757128027eca494fc9c9987fb3398c0bc0 WHIRLPOOL 2288a5fd1b4445baf0c2282637bd4d1247096c3360dcf757fb986f144940e4c8e973b5257d83b4ad2557917052602e1f6b45a83eecaaa4998e0ae03c3e890635
 EBUILD flrig-1.3.16.ebuild 754 SHA256 0b85873327745f1ed81faaae2b872386b8d1a3cdec2943d1476f4ae83cba8052 SHA512 7c967e2d34f8a89cffa78d04127ef8ff855076947c11eb6240cb5d64ba46f2453cf9344d15338cb8f385626a45d045f10d26f2d906144b26bee9327680c64bf4 WHIRLPOOL 51fe88370a7c451288738dbc64cf36817650471bab8ddb5c7fee8ebe020686042ce6b001378599f6af274d57d9690ba4c5f1456629ffe791262e7349fba745f8
 EBUILD flrig-1.3.18.ebuild 756 SHA256 eeaac4a4f770b21640e9f8cb9a615a8499e65ee6134ec6cefb9afae180a55da3 SHA512 1e6acd652313d20916aaef2cd2893257a32c80d92aad93d87cdfb5bdd949aa7029477f09c6cd23043dabc0830c676eb94c7ce0ac34534a0fdc765d34c036966b WHIRLPOOL e8831c502087ceb6412e06a80b2ad9effca9eaf3c6dd89cc490b98780309ee4ce449fd91de9e84f6922d0a22b13941ff0dcd090bb1c35b997c9bfe453fb4699d
 EBUILD flrig-1.3.19.ebuild 751 SHA256 e912f9e956295080d97746960651fa9558ed204f70a6e04f8b898e9a66522d12 SHA512 fda715d9b552a16ca6f1b5a3df71b64f3321da16486904fccd53b2d7e3997a4c7f8ea0535e197bdf0f9c9cf994ed0504903ce7c710e6b7ecfe4f801963841bd9 WHIRLPOOL dced38cf94c2c3bffd5ea2353a1e2204d0c1fc03a9c7ed6f25b54fe139da1c2a55df7daefa81280ec79e62ce9ed532bd21ed329f920de71b50a4bba08efea845
 EBUILD flrig-1.3.21.ebuild 756 SHA256 c25396bb0a598f7d30c6369265a04827b0a6b47f6606fdb7b31d878a68732804 SHA512 34c334eb73b294c94d422f402d4876c6cc6151eca017c6827b99cfe3523567f91d3e5793b88662958a2793eed34a418df1314093dba95d180415e05908cf2bb2 WHIRLPOOL 25f087b5a4fd5d69529c4d79138794a15a3f293a2119700d121abe138ea9a4edc25fa61647c7aff3590611aaeb4e5f02b4f95e23d7d41d6ff8711e01767db52b
-MISC ChangeLog 5351 SHA256 769f8071fd73ee6cc32ef2aecbed7b324cf8108194bcab2a72d1f71e485dcefe SHA512 48069898174f1b5aa07520e33c2ecfd91c8352e4a65930918176368c0a37b5c96303be4195c58c1e9020a4a9918bbedbad98dfb438137d1e190708295d0aa3eb WHIRLPOOL cf8d8df0999391f69b855ff8c81bec29c4d48507a5c4f59957549f06342309baeb9b117d5aa81ccc2d46dabdda3dd88f6cde4150f220411994aa5975812e1269
+EBUILD flrig-1.3.22.ebuild 756 SHA256 6e198010b06756569d25ecd19b4969f56366ea224e7a089f4d86bc2a0574a9d0 SHA512 8ae8c6d793a0b010b85ea39eb62d1fd031396844a586d84a82c9bcad869be176110fed90d04454971efc836808aa3688735452a55a41e4981e15c35ea26fc78c WHIRLPOOL c720ecb5ea2bfef5ec01b961c9b2194f503f485d05850b7a628d36f0147bbc1fe62c7b2b761c8fe52491ba39953aad4b0898ee6992f042a30890045832790155
+MISC ChangeLog 5483 SHA256 35b938e34ff3f5aa86141596054270e04b85f8380d2398a1a7914d943db3271f SHA512 c05e8954be35a26cdf9a0315b901f0b5189cc99916f51a397a2930e0d36ae2f7816ec8899bc572a2e1bfb3d29a623894765b48cb561230028556299af0f292a5 WHIRLPOOL 1457e25d4b1724aae9b134b98a817db078cc2542a4d74cbfc62ddd76f4cf1a3a71f56a1e3e1ded67cc00f887a3c5309812dd180c59988656be3d093530af2b09
 MISC metadata.xml 236 SHA256 c19d776cfd72a8a5833ea6d4c6a59f906f624aa5fd758527c2171d806a9f9096 SHA512 f95348dda4493774aa5123c211b9f7d2b2f8a7d18feea8e31d5b72e73afcc6617a5f4a7648698b0e3726f31ddaddec9545239d27f39c13a149906033c06827b1 WHIRLPOOL ad9eb3edb0f6cf0d91c23ac3d18489aa427468c6bb577f4bf3ce7be1ee87379ad154cbb8f370637f8105bfc02380de2063b6b4d0a5a61e1f5c9b2faf7303b0d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUVdeQACgkQQe4uqXYgU9WlwQCguk8pb/TaUgPhCA6QF0Y+tkwB
-neAAnjb1EynGw6zvo/Sa5WEV6NsYT/Sm
-=+2mf
+iEYEAREIAAYFAlVEcCcACgkQQe4uqXYgU9W8vACg0xrNct2fOJEwHGn/akS8AQ6G
+j4oAn1QN9/Hb6ipeqVAUCXzX2NgaqgoY
+=StoN
 -----END PGP SIGNATURE-----
