@@ -5,24 +5,16 @@ AUX xlog-1.9-desktop-update.patch 1393 SHA256 c9f9afee6309420b875363a3a52a996e48
 AUX xlog-2.0.7-desktop.patch 435 SHA256 ad26e07d5d254a185d13b4484fb69341aa904fe1e2528bed1710e52e582bd5b0 SHA512 5119356e9635ca7b6d028d4bb3be12542636ce5d2967540b20ad9c22d62792b81a1a06fcd8722c7cbe8df706d8113e60b308d1db7c6fa8f3238bea039eb4b4f6 WHIRLPOOL 49cf7184131956a77664012853622b6cdf77ba047ccb25a9b09b78c793b719b37604a8a92b7202d81a98ed13c170f70d76d6e15bf3bc1b0279e2e53d35ceae60
 DIST xlog-2.0.11.tar.gz 11395343 SHA256 a2381b6bbbf446d9bb95644d8394c5fe5fa43bbafe0c87ef65a0f6fbdafcb744 SHA512 15e91cc51af162d4def7e9ce29a3bde7af076ba875e939d3e908ac0fb39b8e0c30a1fdad6ec58d19a70947629684209038ddf83cf8316331f059fa3a3db5cc34 WHIRLPOOL e7dcaf548acf36e39400b3d039348a86cb30189cbc551158902728698b23a5db988c9fcf54ad847a2291e3062ec9cd963bd4281032653bf7f59f6494a2441579
 DIST xlog-2.0.12.tar.gz 11396005 SHA256 c5666c53e67b92b49bedb5ee1a629cf62d384033af6a912dff7726995775abd4 SHA512 34f590915b11e0aa24a23210f90f0bc7fb62874b46ab226e254e766b14965add58752a131c1a4b792e2447670059f92ef5d160fba8382fe757e31e8478902550 WHIRLPOOL e9b2561d23e9902de2753c4fd07eca98fa42bfe0d62ce1f7113f9056b5df801247be0b95665d1d85d8c3f7d05e606fc949df69bc72bfb8cfba43066d4de96c46
+DIST xlog-2.0.13.tar.gz 11427287 SHA256 d53d8538b9fc61e761d1bd84ad0c866cc9a50540b663521ebad49df479d798ab SHA512 304efc65c35890f2d988680de2a5f21d2e728882175f9a3abf72a749d9172833ac7b18cbd65d9e9c2c143ee27bea0476b12ff5eb760d8dcbb64800944ac89003 WHIRLPOOL 7e77e2db8cd8f373fe5f93f81d80b29fdfc4870eab24557a8aa1c940d67df80fc4751d409a2751a795c42a14edb0da30a39dc88af7771cc223f0bb408c15ef23
 EBUILD xlog-2.0.11.ebuild 1416 SHA256 f69ac5c99e561db8940550bfd5685f0dc44f22b78a0890049ba48cc6077e0237 SHA512 4c470a6ff1dbe83803764dc6664092f1e18c80704793cf70f33ca9f06607b0a467114e8ad6ed51dc175010a31fdbc9fea2c21d43378f396623968e53ab9e4002 WHIRLPOOL 7a0ab381ffe1519e31d4fe9cc27f7501d1e6bac1eb3402b7ad107154cfd839201143e1ec4065c9827230459db5858fc5fa9349708c6950a8f5f3561072d822c1
 EBUILD xlog-2.0.12.ebuild 1416 SHA256 9d11118e18d1b436582e901a3c27145dc144a1ac07432d9a5305590c3554bd4a SHA512 884d9d9dd9af40d1bbbd8db0711092deddf525c71532cb1af1e67cfef79d57cb0e4afbd40ebbc90980c0366b817b308617f6a5647fd48b34d4c4d379c4e1c59f WHIRLPOOL 9710a03de655546027a54efae59fac96ab65d3392438180fd9ea1313964fdc0ec98a0f4d0131b2e5f8350306d125a9e1077716d0de771ad9d281d7c82686ce4d
-MISC ChangeLog 4668 SHA256 f4c1a3f5659b84c1cc2ef191c8b81ea64b3bb14ca87f598e69d742f6a237fb92 SHA512 7d3f64847809732c9bbeb18b6202c11fee1ccdf4aa19f955e603e36edc5195be4d9d4fe09abb60c6ba0cb0f5b0b9db00069176acec6237becb24246307c5eb84 WHIRLPOOL 9e7ad61ebfffdd349683d3787655419e86cdebd9de66976975b9d1c34158551234b11881d624c92e4b5aa70ec8bda5989ea0faae0709f2292fd1c9af04c50fde
+EBUILD xlog-2.0.13.ebuild 1424 SHA256 7e61ab5d7b7488c0a59c75f06c00f551f5b8a596a25d2ea24d0d1a65a52e9a6b SHA512 c17b7a55438c9cbfd8814ee6e5b55bf42f946023634e208bce7cabc7736e0b73fd6053e72aa72de708ec5cd9178ee58de23dd655db4fd7ca14f5a289d8389470 WHIRLPOOL 5c6b77d81976069c548dd144a818f9453d207cb5d87e975c8cd95902a55e6fed5e49c9fe85ec1c338234304a944af541c3f55ef8b2af1c636d9b79237e863034
+MISC ChangeLog 4788 SHA256 a9645e8fc727c63eccda647693af09e7be10d2c66f635be24869cb9b8432a24c SHA512 37284f7dc00f7ed9327fdfa75233fb12989482691623856535fd72c59c61f97d5bfcd4fcecc5822cc610d0ab9ab06fd84fb151c75c27278dea4bd3d67840e028 WHIRLPOOL 45ab22ee310392ff6d8d81a6e6bfc7911c1a82cf2100893f36c4abbc7bb33476c8377e6b0a6a75946a4323080e0e18a476ef5d690b69e07af2359739890e782f
 MISC metadata.xml 231 SHA256 82b442533d9a6d51cad11e8ac81c9744f958281e42a3207a5430f375600795ae SHA512 dbb0072ccd780f03c543fbea6687a80979a0a023644209faacc915de1859c43d0285d6569cc088cb954d707183776301e6df884288d29fb71a5ea6d6a5c7d8bf WHIRLPOOL facfd7db2740e515b4f8c05fdcc446f4c100f927ea570c94eeeca57d6ccd2136ea6f170a8a54266ca5e86718cbea1d3840d047727ec3688d5a98ea69657b185f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUN74IAAoJELp701BxlEWfAogQAL0zQmR9t/Pw69mbNuJMbWVr
-eilD/oXDcLMR5L2jieNWZKQN87DXTyFcgIoN11gCAt394+baY68cL+qWhMo38Hyr
-H5qgtSDjtHNoXJoJvxeAFWRxfbFF0kJfQqNKo+gkE+O/ZDS6G2KvN9PuePAEvpCh
-39xOABJhoa1sLRpM24KdNoNnkuFMJlep5r6hZ5dCSQXabAxRlcwZBUqGZu4Y7LUY
-JTDh72lUj/HQUtlFBCmLdTc+Xtir2VXGCBBf2R+ra0CDIYL5mSSKoLX4IQly/Rh9
-P9V0ays8PHnddGxH3TcecylkT6delWAppWmO2Zia8DqCxEX0wQL0BMT4WSaMfTZy
-vu/dmALicLxNkPrZ0+a0CjneR0m0Z96aSse7u7yX1cQ8jbRmqTunK6HkN3eyWihf
-g8v30mFdTlJXBB5xorPsSABBzasvGwlGnxd/2WzsWQHfz8sOW2m6uISZxWqcVZb+
-BU+mbzohW0kxi/Z1E6zfjJ9ZHRazaq3NbrUpVNVKjcyElapNi7HXEXTIagzaF3yA
-dutqn/tygFPugY2e5mZlUjQuxhrGY0SXctdIzw22clYaPh+fXDzVtW5OfU/2+pyO
-1f8E74+aSAqqVjs6+v8TltzTGrxnY8C97IGt8rGGhQtJCowAUHK9ksttG1FXWsuj
-NXn8QzkyAE9bptPb3yVv
-=LlUD
+iEYEAREIAAYFAlVEdLQACgkQQe4uqXYgU9UAkgCgh2QgCDrmMJRPc2sIyUX+6/St
+WhkAoOAQ7Y11WYFRyF+gDI1ryLAz1Ofr
+=RWvS
 -----END PGP SIGNATURE-----
