@@ -1,0 +1,13 @@
+DEFINED_PHASES=install prepare
+DEPEND=x11-libs/libX11 x11-libs/fltk:1 x11-misc/xdg-utils sys-devel/gettext !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=Transceiver control program for Amateur Radio use
+EAPI=5
+HOMEPAGE=http://www.w1hkj.com/flrig-help/index.html
+IUSE=nls
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=x11-libs/libX11 x11-libs/fltk:1 x11-misc/xdg-utils
+SLOT=0
+SRC_URI=http://www.w1hkj.com/downloads/flrig/flrig-1.3.22.tar.gz
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=e8be2731883448b8899926bf0005855f
