@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare
+DEPEND=media-libs/hamlib dev-libs/glib:2 x11-libs/gtk+:2 sys-devel/gettext virtual/pkgconfig !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=An amateur radio logging program
+EAPI=4
+HOMEPAGE=http://www.nongnu.org/xlog
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=media-libs/hamlib dev-libs/glib:2 x11-libs/gtk+:2
+SLOT=0
+SRC_URI=http://download.savannah.gnu.org/releases/xlog/xlog-2.0.13.tar.gz
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=d9312a36ac70d92e1945a6b293ba4652
