@@ -1,6 +1,11 @@
 # ChangeLog for media-radio/flrig
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/flrig/ChangeLog,v 1.41 2015/03/27 15:23:06 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/flrig/ChangeLog,v 1.42 2015/05/02 06:35:11 tomjbe Exp $
+
+*flrig-1.3.22 (02 May 2015)
+
+  02 May 2015; Thomas Beierlein <tomjbe@gentoo.org> +flrig-1.3.22.ebuild:
+  Minor maintenance release
 
 *flrig-1.3.21 (27 Mar 2015)
 
